objects/SVMXC__Expense_Pricing__c.object
<CustomObject>
    <description>Expense pricing for covered expenses</description>
    <fields>
        <fullName>SVMXC__Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airfare</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Food - Breakfast</fullName>
                </value>
                <value>
                    <fullName>Food - Lunch</fullName>
                </value>
                <value>
                    <fullName>Food - Dinner</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Mileage</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Rental Car</fullName>
                </value>
                <value>
                    <fullName>Tolls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Markup %</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Actuals</fullName>
                </value>
                <value>
                    <fullName>Discount %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Expense Pricing</relationshipLabel>
        <relationshipName>Expense_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Plan</label>
        <referenceTo>SVMXC__Service_Plan__c</referenceTo>
        <relationshipLabel>Expense Pricing</relationshipLabel>
        <relationshipName>Expense_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense Pricing</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SVMXC__SVMX_ServicePlan_Or_Contract</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEN(SVMXC__Service_Contract__r.Id) &gt; 0, IF(LEN( SVMXC__Service_Plan__r.Id ) &gt; 0, TRUE, FALSE), IF(LEN(SVMXC__Service_Plan__r.Id) &gt; 0, FALSE, TRUE))</errorConditionFormula>
        <errorMessage>Expense Pricing must be associated with either Service Plan or Service Contract, but not both.</errorMessage>
    </validationRules>
</CustomObject>